# Qt-Autoclicker

./: .gitignore  LICENSE  README.md  Test.py  main.py  pyproject.toml  requirements.txt  run.py
assets/icons/: index.theme
aur-qt-autoclicker/: PKGBUILD
autoclicker/data/: CurrentTheme.json
autoclicker/data/ui/: Metrics.qml  SVGLibrary.qml  Typography.qml
autoclicker/ui/: main.qml
autoclicker/ui/components/: AppRect.qml  CustomButton.qml  SVGObject.qml  Settings.qml  TopBar.qml
backend/: controller.py  platform.py
backend/Workers/: pynput_worker.py  wayland_shortcut_worker.py
backend/Workers/KeyboardClicking/: __init__.py  pynput_keyboard.py  wayland_keyboard.py
backend/Workers/MouseClicking/: __init__.py
backend/Workers/ShortcutHandling/: __init__.py  wayland_shortcut_worker.py
backend/utils/: __init__.py  key_mapper.py
backend/workers/keyboard_clicking/: wayland_keyboard.py
backend/workers/shortcut_handling/: __init__.py  shortcut_worker.py
data/: CurrentTheme.json  Data.qml  Settings.json  Theme.qml  qmldir
data/config/: SettingsManager.qml
data/ui/: AppConfig.qml  Metrics.qml  Theme.qml  Typography.qml
qt_autoclicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_keyboard_workers.py  test_mouse_workers.py
ui/: main.qml
ui/components/: AppRect.qml  CpsIndicator.qml  CustomButton.qml  CustomComboBox.qml  CustomShortcutEditor.qml  CustomSpinBox.qml  CustomTabBar.qml  CustomText.qml  IconButton.qml  Mouse.qml  SVGObject.qml  Settings.qml  SettingsButton.qml
(+5 files in other folders)
