[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qt-autoclicker"
version = "0.1.0"
description = "A Qt-based autoclicker with keyboard and mouse automation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydbus>=0.6.0",
    "pygobject>=3.54.5",
    "pynput>=1.8.1",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "wayland-automation>=0.2.6",
]

[project.scripts]
qt-autoclicker = "autoclicker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoclicker*"]

[tool.setuptools.package-data]
autoclicker = ["assets/**/*", "data/**/*", "ui/**/*"]
